Fix line-height issue on mobile for text block title

--- a/web.bcksp.es/client/sass/blocks/_text-block.scss
+++ b/web.bcksp.es/client/sass/blocks/_text-block.scss
@@ -23,8 +23,11 @@
 
 .text-block__title {
   font-size: $size-48;
-  line-height: 0.5;
   text-transform: uppercase;
+
+  @include media-query("desktop") {
+    line-height: 0.5;
+  }
 
   // Small underline decoration
   @include titleDecoration();
